# python-cognito-cerbos

./: .gitignore  README.md  cognito.py  credentials.py  jwt.py  main.py  pyproject.toml
auth/: cognito.py  jwt.py
cerbos/: Dockerfile  deploy.sh  start.sh
templates/: index.html  user.html
