[project]
name = "python-cognito-cerbos"
version = "0.1.0"
description = "Demo of Cerbos integration with FastAPI and AWS Cognito User Pools"
authors = [{ name = "Cerbos Developers", email = "help@cerbos.dev" }]
dependencies = [
    "uvicorn[standard]>=0.17.6",
    "cerbos>=0.1.0",
    "fastapi>=0.76.0",
    "boto3>=1.22.8",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.27.1",
    "pycognito>=2022.5.0",
    "dataclasses-json>=0.5.7",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.5",
    "starlette>=0.18.0",
    "itsdangerous>=2.1.2",
]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = ["black>=22.3.0", "isort>=5.10.1"]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyprojectx]
pdm = "pdm"
black = "black"
isort = "isort"

[tool.pyprojectx.aliases]
install = "pdm install"
outdated = "pdm update --outdated"
black = "black main.py jwt.py"
isort = "isort main.py jwt.py"
format = "pw@isort && pw@black"
demo = "pdm run python main.py"
#test = "pdm run pytest"
#run = "pdm run"
